--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
-    background-color: lightslategrey;
-    font-family: 'Oswald';
-}
+        background-color: lightslategrey;
+        font-family: Oswald;
+        background-color: white;
+      }
