--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+form {
+    position: center;
+  }
+
 body {
         background-color: lightslategrey;
         font-family: Oswald;
-        background-color: white;
-      }
+    }
+
