--- a/style.css
+++ b/style.css
@@ -1,49 +1,23 @@
 body{
     font-family: 'Oswald';
-    font-weight: 200;
+    font-size: 20px;
     background-color: lightslategray;
     align-content: center;
 }
 
+.full{
+    width: 100%;
+}
+
 form {
- background-color: white;
+    width: mid-content;
+    background-color: white;
+    padding: 20px 25px 20px 20px;
+    margin: 40px;
     border-radius: 5px;
-    margin: 35px;
-    padding: 30px;
     box-sizing: content-box;
-    width: min-content;
 }
 
-input[type="text"]{
-  padding: 0px 30px;
-  border-radius: 3px;
-}
-
-input[type="email"]{
-  padding: 0px 30px;
-  border-radius: 2px;
-}
-
-input[type="password"]{
-  padding: 0px 30px;
-  border-radius: 2px;
-}
-
-input[type="date"]{
-  padding: 0px 46px;
-  border-radius: 2px;
-  text-align:left;
-}
-
-input[type="number"]{
-  padding: 0px 30px;
-  border-radius: 2px;
-}
-
-textarea[name="address"]{
-  padding: 0px 12px;
-  border-radius: 2px;
-}
 
 
 input[type="submit"]{
